<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.practicum.practice_work_1_1.presentations.ServeFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_serve" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.practicum.practice_work_1_1.presentations.CollectionsFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.practicum.practice_work_1_1.presentations.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/feedPhotoDetails"
        android:name="com.practicum.practice_work_1_1.presentations.ExhibitPhotoDetails"
        android:label="fragment_feed_photo_details"
        tools:layout="@layout/fragment_exhibit_photo_details" />

    <fragment
        android:id="@+id/collectionsDetails"
        android:name="com.practicum.practice_work_1_1.presentations.DetailsFragment"
        android:label="fragment_collections_details"
        tools:layout="@layout/fragment_details" />

</navigation>