<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentations.DetailsFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/custom_color_secondary"
        app:layout_constraintBottom_toTopOf="@id/collectionDetailsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias=".25"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collectionDetailsInterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="collectionDetailsRecycler,collectionTotalPhoto,collectionDescription,backgroundCover,collectionName,collectionTags,center,authorNickname,imageView" />

    <ImageView
        android:id="@+id/backgroundCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/collectionDetailsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#B3FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/backgroundCover"
        app:layout_constraintEnd_toEndOf="@id/backgroundCover"
        app:layout_constraintStart_toStartOf="@id/backgroundCover"
        app:layout_constraintTop_toTopOf="@id/backgroundCover" />

    <View
        android:id="@+id/center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectionDetailsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collectionTotalPhoto"
        app:spanCount="2" />

    <TextView
        android:id="@+id/collectionTotalPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:shadowColor="@color/white"
        android:shadowRadius="10"
        android:text="@string/collections_details_collection_total_photos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/authorNickname"
        app:layout_constraintEnd_toStartOf="@id/authorNickname"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/authorNickname" />

    <TextView
        android:id="@+id/authorNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:shadowColor="@color/white"
        android:shadowRadius="3"
        android:text="@string/collections_details_collection_author_nickname"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/collectionDetailsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collectionDescription" />

    <TextView
        android:id="@+id/collectionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:shadowColor="@color/white"
        android:shadowRadius="3"
        android:text="@string/collections_details_collection_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/authorNickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collectionTags" />

    <TextView
        android:id="@+id/collectionTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:shadowColor="@color/white"
        android:shadowRadius="3"
        android:text="@string/collections_details_collection_tags"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/collectionDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collectionName" />

    <TextView
        android:id="@+id/collectionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:shadowColor="@color/white"
        android:shadowRadius="3"
        android:text="@string/collections_details_collection_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/collectionTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>